# matchday_demand_forecasting

./: LICENSE  Makefile  README.md  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
matchday_demand_forecasting/: __init__.py  config.py  dataset.py  features.py  plots.py
matchday_demand_forecasting/modeling/: predict.py  train.py
notebooks/: 01_eda.ipynb  02_eda.ipynb
